# drone_swarms

./: .gitignore  README.md  mjmodel.mjb  pyproject.toml
assets/mujoco/: swarm_scene.xml
benchmarks/: throughput.py
configs/mpc/: energy_aware.yaml
configs/training/: ppo.yaml
eval/: __init__.py  mujoco_viz.py  visualizer.py
scripts/: demo.py  eval_trained.py  record_demo.py
swarm/: __init__.py
swarm/comms/: __init__.py  degradation.py
swarm/control/: __init__.py  costs.py  hybrid.py  mpc.py  rl_policy.py
swarm/envs/: __init__.py  dynamics.py  mjx_env.py  reset.py
swarm/envs/tasks/: __init__.py  coverage.py  gps_denied.py  threat_response.py
swarm/perception/: __init__.py  encoders.py  gnn.py  graph_builder.py
swarm/planning/: __init__.py
swarm/utils/: __init__.py  geometry.py  logging.py  metrics.py  pytree.py
tests/: conftest.py  test_env.py  test_gnn.py
training/: rollout.py  sharding.py  train.py
